--- a/GenericAccounting/GenericAccounting/Web.config
+++ b/GenericAccounting/GenericAccounting/Web.config
@@ -11,6 +11,9 @@
   <connectionStrings>
     <add name="GenericAccountingDataEntities" connectionString="metadata=res://*/GenericAccountEntities.csdl|res://*/GenericAccountEntities.ssdl|res://*/GenericAccountEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4NFKJPF;initial catalog=GenericAccountingData;user id=phitran;password=WVWYstu4d;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <authentication mode="Forms">
+    <forms loginurl="~/Login/DoLogin"></forms>
+  </authentication>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
