Added Business Logic for users and unit test for Business logic

--- a/GenericAccounting/BOL/BusinessEntities.csproj
+++ b/GenericAccounting/BOL/BusinessEntities.csproj
@@ -82,6 +82,9 @@
       <DependentUpon>GenericAccountEntities.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>GenericAccountEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="user.cs">
       <DependentUpon>GenericAccountEntities.tt</DependentUpon>
     </Compile>
