--- a/GenericAccounting/GenericAccounting/Web.config
+++ b/GenericAccounting/GenericAccounting/Web.config
@@ -14,6 +14,12 @@
   <authentication mode="Forms">
     <forms loginurl="~/Login/DoLogin"></forms>
   </authentication>
+  <membership defaultProvider="membershipProvider">
+    <providers>
+      <clear />
+      <add name="membershipProvider" type="BusinessLogic.SimpleMembershipProvider"></add>
+    </providers>
+  </membership>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -32,7 +38,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
