Added img background for homepage

--- a/GenericAccounting/GenericAccounting/GenericAccounting.csproj
+++ b/GenericAccounting/GenericAccounting/GenericAccounting.csproj
@@ -100,6 +100,15 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\Cplusplus.jpg" />
+    <Content Include="Content\Images\HelloWorld.jpg" />
+    <Content Include="Content\Images\Java.jpg" />
+    <Content Include="Content\Images\KeepCalm.png" />
+    <Content Include="Content\Images\NodeJS.png" />
+    <Content Include="Content\Images\NotCalm.png" />
+    <Content Include="Content\Images\Python.png" />
+    <Content Include="Content\Images\Ubuntu.png" />
+    <Content Include="Content\Images\VisualStudio.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -117,11 +126,14 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -135,6 +147,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -150,6 +163,10 @@
     <ProjectReference Include="..\BOL\BusinessEntities.csproj">
       <Project>{a685345a-9346-41a6-8572-41f8d9317164}</Project>
       <Name>BusinessEntities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj">
+      <Project>{c5e0bf24-7770-4b72-bb82-848da45e143f}</Project>
+      <Name>BusinessLogic</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
