--- a/GenericAccounting/GenericAccounting/Web.config
+++ b/GenericAccounting/GenericAccounting/Web.config
@@ -11,15 +11,6 @@
   <connectionStrings>
     <add name="GenericAccountingDataEntities" connectionString="metadata=res://*/GenericAccountEntities.csdl|res://*/GenericAccountEntities.ssdl|res://*/GenericAccountEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4NFKJPF;initial catalog=GenericAccountingData;user id=phitran;password=WVWYstu4d;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <authentication mode="Forms">
-    <forms loginurl="~/Login/DoLogin"></forms>
-  </authentication>
-  <membership defaultProvider="membershipProvider">
-    <providers>
-      <clear />
-      <add name="membershipProvider" type="BusinessLogic.SimpleMembershipProvider"></add>
-    </providers>
-  </membership>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -29,12 +20,21 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Login/DoLogin"></forms>
+    </authentication>
+    <membership defaultProvider="membershipProvider">
+      <providers>
+        <clear />
+        <add name="membershipProvider" type="BusinessLogic.SimpleMembershipProvider"></add>
+      </providers>
+    </membership>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
